# hci_emu

./: .gitignore  =0.0.225  BRIDGE.bat  CONTRIBUTING.md  HCI.bat  LICENSE  MANIFEST.in  README.md  SETUP.md  clean_local.bat  pyproject.toml  requirements.txt  run.bat  setup.bat  setup.py
.github/workflows/: publish.yml
configs/: bumble_bonds.json.example  smp_config.json  ui_config.json
docs/: APP_API_REFERENCE.md  README.md  TECHNICAL_REFERENCE.md  USER_MANUAL.md
docs/development/: BONDING_IMPLEMENTATION_GUIDE.md  BONDING_KEY_STORAGE_RESEARCH.md  BUMBLE_SMP_RESEARCH.md  DELIVERY_SUMMARY.txt  ELLISYS_FIX_SUMMARY.md  ELLISYS_INJECTION_FIXED.md  GUIDE.md  HCI_SNOOP_GUIDE.md  IMPLEMENTATION_STATUS.md  PACKET_STRUCTURE_GUIDE.md  PAIRING_IMPLEMENTATION.md  PERSISTENT_BONDING_GUIDE.md  PROJECT_CHECKLIST.md  QUICKSTART.md  QUICKSTART_SNOOP.md  QUICK_BONDING_FIX.md  QUICK_REF.md  README.md  README_ELLISYS_SOLUTION.md  SUCCESS_REPORT.md
examples/: basic_connection.py  hci_capture.py  scan_devices.py
resources/: adv_types.yaml  descriptors_uuid_sig.yaml  uuid_descriptions.json
scripts/: README.md  check_bonding.py  scan_connect_discover.py  verify_bonding.py
src/: app.py  connector.py  hci_snooper.py  main.py  menu.py  scanner.py  utils.py
src/hciemu/: __init__.py  app.py  apple_services.py  connector.py  hci_snooper.py  main.py  menu.py  paths.py
src/hciemu/gui/: __init__.py  __main__.py  backend.py  main.py  pairing_delegate.py  theme.py
src/hciemu/gui/pages/: __init__.py  advertiser.py  base.py  bridge.py  gatt.py  scan.py  security.py  settings.py
tests/: test_apple_services.py  test_bonding.sh  test_connection.py  test_ellisys_udp.py  test_legacy_le.py  test_scan.py
